--- a/index.html
+++ b/index.html
@@ -1,20 +1,56 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Basic Meta -->
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="John Doe - Frontend Developer Portfolio. Showcasing modern web development projects and skills." />
-    <meta name="keywords" content="frontend developer, react, typescript, web development, portfolio" />
-    <title>John Doe - Frontend Developer Portfolio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <meta name="author" content="Mohamed Shoman" />
+    <meta
+      name="description"
+      content="Mohamed Shoman - Frontend Developer specializing in React & Next.js. Crafting responsive, accessible, and high-performance web applications." />
+
+    <!-- SEO Title -->
+    <title>Mohamed Shoman | React & Next.js Frontend Developer Portfolio</title>
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+
+    <!-- Open Graph / Social Media -->
+    <meta
+      property="og:title"
+      content="Mohamed Shoman | Frontend Developer Portfolio" />
+    <meta
+      property="og:description"
+      content="Crafting responsive, accessible, and high-performance web applications using React and Next.js." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://outly-project.vercel.app/" />
+    <meta
+      property="og:image"
+      content="/src/assets/project2.png" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Mohamed Shoman | Frontend Developer Portfolio" />
+    <meta
+      name="twitter:description"
+      content="Crafting responsive, accessible, and high-performance web applications using React and Next.js." />
+    <meta
+      name="twitter:image"
+      content="/src/assets/project2.png" />
+
+    <!-- Optional: Theme Color -->
+    <meta name="theme-color" content="#7c3aed" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet" />
     <style>
       html {
         scroll-behavior: smooth;
       }
-      
+
       .line-clamp-3 {
         display: -webkit-box;
         -webkit-line-clamp: 3;
