--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Mohamed Shoman | React & Next.js Frontend Developer Portfolio</title>
 
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="src/assets/favicon.svg" />
 
     <!-- Open Graph / Social Media -->
     <meta
